fixed the horizontal scroll on mobile, positioning of elements on desktop and mobile are messed up but WIP.

--- a/tailwind.css
+++ b/tailwind.css
@@ -457,7 +457,7 @@ video {
   --tw-pan-x:  ;
   --tw-pan-y:  ;
   --tw-pinch-zoom:  ;
-  --tw-scroll-snap-strictness: proximity;
+  --tw-eoll-snap-strictness: proximity;
   --tw-gradient-from-position:  ;
   --tw-gradient-via-position:  ;
   --tw-gradient-to-position:  ;
